# transmap

./: CMakeLists.txt  LICENSE  README.md  transmap.c  transmap.h  transmap_bam.c  transmap_bam.h  transmap_bed.c  transmap_bed.h  transmap_gtf.c  transmap_gtf.h  vector.h
bioidx/: CMakeLists.txt  binidx.c  binidx.h  bioidx.c  bioidx.h  bioidx_test.c  mempool.h
